<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="analyze"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_analyze"
        android:shortcutShortLabel="@string/shortcut_scan_short"
        android:shortcutLongLabel="@string/shortcut_scan_long"
        android:shortcutDisabledMessage="@string/shortcut_scan_disabled">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.teamwifi.kkatwifibeta"
            android:targetClass="com.teamwifi.kkatwifibeta.BaseReadingActivity" />
        <!-- If your shortcut is associated with multiple intents, include them
             here. The last intent in the list is what the user sees when they
             launch this shortcut. -->
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <!-- Specify more shortcuts here. -->
</shortcuts>